--- a/css/theme/pres.css
+++ b/css/theme/pres.css
@@ -13,13 +13,13 @@
   font-style: normal; }
 
 .reveal h1 {
-  font-size: 6rem; }
+  font-size: 6.5rem; }
 
 .reveal h2 {
   font-size: 4rem; }
 
 .reveal h3 {
-  font-size: 2.5rem; }
+  font-size: 3rem; }
 
 .reveal h4, .reveal h5, .reveal .h6 {
   font-size: 1.5rem; }
@@ -29,6 +29,13 @@
   -moz-hyphens: none;
   -ms-hyphens: none;
   hyphens: none; }
+
+.hella {
+  color: #aff;
+  text-shadow: 4px 4px 5px #ff6; }
+
+.reveal ul {
+  min-width: 600px; }
 
 /*********************************************
  * GLOBAL STYLES
