--- a/css/theme/source/pres.scss
+++ b/css/theme/source/pres.scss
@@ -29,9 +29,9 @@
 $heading1TextShadow: 0 1px 0 #ccc, 0 2px 0 #c9c9c9, 0 3px 0 #bbb, 0 4px 0 #b9b9b9, 0 5px 0 #aaa, 0 6px 1px rgba(0,0,0,.1), 0 0 5px rgba(0,0,0,.1), 0 1px 3px rgba(0,0,0,.3), 0 3px 5px rgba(0,0,0,.2), 0 5px 10px rgba(0,0,0,.25), 0 20px 20px rgba(0,0,0,.15);
 $mainFont: 'Bree Serif', sans-serif;
 $headingFont: 'Francois One', sans-serif;
-.reveal h1 { font-size: 6rem }
+.reveal h1 { font-size: 6.5rem }
 .reveal h2 { font-size: 4rem }
-.reveal h3 { font-size: 2.5rem }
+.reveal h3 { font-size: 3rem }
 .reveal h4, .reveal h5, .reveal .h6 { font-size: 1.5rem;}
 $backgroundColor: none;
 $linkColor: #6cf;
@@ -48,7 +48,12 @@ $linkColor: #6cf;
   hyphens: none;
 }
 
+.hella {
+  color: #aff;
+  text-shadow: 4px 4px 5px #ff6;
+}
 
+.reveal ul { min-width: 600px;}
 
 // Theme template ------------------------------
 @import "../template/theme";
